Update helper bot privacy policy with references to the chat bot, instead of a website

--- a/helper_bot/privacy_policy.html
+++ b/helper_bot/privacy_policy.html
@@ -3,8 +3,8 @@
 <p>Effective date: June 04, 2019</p>
 
 <p>
-  ("us", "we", or "our") operates the website (hereinafter referred to as the
-  "Service").
+  ("us", "we", or "our") operates the Helper Bot chat bot (hereinafter referred
+  to as the "Service").
 </p>
 
 <p>
@@ -26,7 +26,9 @@
 <ul>
   <li>
     <p><strong>Service</strong></p>
-    <p>Service is the website operated by</p>
+    <p>
+      Service is the Helper Bot chat bot operated by fan group Yo Mama Mastery
+    </p>
   </li>
   <li>
     <p><strong>Personal Data</strong></p>
